# dailyintegral

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  build.sh  gunicorn.conf.py  integrals.db  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  run.py  start.sh  vercel.json
.claude/: settings.local.json
.github/workflows/: deploy.yml  supabase-keepalive.yml
api/: index.py
app/: __init__.py  ai_hint.py  api.py  auth.py  config.py  models.py  problem_source.py  progress.py  routes.py  utils.py
app/templates/: index.html
app/tests/: test_ai_hint.py  test_api.py  test_auth_progress.py  test_database.py  test_equivalence_complex.py  test_models.py  test_submit_accepts_listed_answers.py  test_supabase_source.py  test_utils.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  App.test.jsx  main.jsx
frontend/src/components/: AnswerInput.jsx  AuthModal.jsx  CalendarGrid.jsx  Header.jsx  Hint.jsx  HintDisplay.jsx  MathDisplay.jsx  MathInput.jsx  PracticeMode.jsx  ProblemDisplay.jsx  ProgressiveHint.jsx  ResultMessage.jsx  ShareCard.jsx  SolutionReveal.jsx  SolutionReveal.test.jsx  (+3 more)
migrations/: 001_initial_schema.sql  _candidate_pool.py  _candidate_pool_hard.py  _generate_candidates.py  add_challenging_problems.py  add_problems.py  author.py  fix_problem_latex.py  migrate.py  problem_models.py  problems_registry.py  seed_supabase.py  verify_new_problems.py
migrations/supabase/: 001_integrals.sql
migrations/tests/: test_author.py  test_problem_models.py  test_runner.py
(+6 files in other folders)
